--- a/README
+++ b/README
@@ -4,8 +4,8 @@ To install it you can download the zip file and unzip it to your modules directo
 
 Then add this to your dependencies.yml
 
-   - play.module -> lombok 1.2.3
-   - org.projectlombok -> lombok 0.10.0 (or any version of Lombok you want)
+   - play.module -> lombok 1.2.4
+   - org.projectlombok -> lombok 0.10.8 (or any version of Lombok you want)
    
 repositories:
   - play-modules :
@@ -14,6 +14,6 @@ repositories:
         contains:
                     - play.module -> *
 
-This has been tested with Play! 1.2.2 and 1.2.3
+This has been tested with Play! 1.2.4
 
 You will still need to install Lombok in your IDE, if you are using one.
